New references, PDF added

--- a/ic.html
+++ b/ic.html
@@ -347,7 +347,7 @@ return
 </div>
 <p>Bild: <span class="citation">Gollner (<a href="#ref-gollner2016">2016</a>)</span></p>
 <h1 id="ressourcen">Ressourcen</h1>
-<h2 id="events">Events:</h2>
+<h2 id="events">Events</h2>
 <p><a href="http://www.intelligentcontentconference.com/" title="2017 Intelligent Content Conference Las Vegas, Nevada">Intelligent Content Conference</a></p>
 <p><a href="https://2017-adobe-dita-world.meetus.adobeevents.com/" title="Adobe DITA World 2017 - Adobe DITA World 2017 – The DITA Online Conference | Adobe Events">Adobe DITA World 2017</a></p>
 <h2 id="präsentation-und-literatur">Präsentation und Literatur</h2>
